--- a/lab-python-list-comprehension.ipynb
+++ b/lab-python-list-comprehension.ipynb
@@ -78,172 +78,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e222523f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "products = [\"t-shirt\", \"mug\", \"hat\", \"book\", \"keychain\"]\n",
-    "\n",
-    "def initialize_inventory(products):\n",
-    "    inventory = {articulo: int(input(f\"introduce la cantidad de {articulo}s diponible: \")) for articulo in products}\n",
-    "    return inventory"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b5fcfd38",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_customers_orders():\n",
-    "    num_orders = int(input(\"Enter the number of customer orders: \"))\n",
-    "    customers_orders = {input(f\"introduce el nombre del articulo que quiere ({i + 1}/{num_orders}): \").strip().lower() for i in range(num_orders)}\n",
-    "    return customers_orders"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ddae9d3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calculate_total_price(customers_orders):\n",
-    "    prices = {articulo: float(input(f\"Introduce el precio de {articulo}: \")) for articulo in customers_orders}\n",
-    "    total_price = sum(prices.values())\n",
-    "    return total_price"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "929ff96b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def update_inventory(customers_orders, inventory):\n",
-    "    inventory = {\n",
-    "        articulo: (cantidad - 1 if articulo in customers_orders and cantidad > 0 else cantidad)\n",
-    "        for articulo, cantidad in inventory.items()\n",
-    "    }\n",
-    "    \n",
-    "    inventory = {\n",
-    "        articulo: ( cantidad for articulo, cantidad in inventory.items() if cantidad > 0 )\n",
-    "    }\n",
-    "    \n",
-    "    return inventory"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e01cdaf7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def print_order_statistics(order_statistics):\n",
-    "    total_products_ordered, percentage_ordered = order_statistics\n",
-    "\n",
-    "    print(\"Order Statistics:\\n\")\n",
-    "    \n",
-    "    print(f\"Total products ordered: {total_products_ordered}\")\n",
-    "\n",
-    "    print(f\"Percentage of unique products ordered: {percentage_ordered}%\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "03c4a9be",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calculate_order_statistics(customers_orders, products):\n",
-    "    total_products_ordered = len(customers_orders)\n",
-    "\n",
-    "    total_unique_products = len(products)\n",
-    "\n",
-    "    percentage_ordered = (total_products_ordered / total_unique_products) * 100\n",
-    "    \n",
-    "    return total_products_ordered, percentage_ordered"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "6a7ccd2a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def total_price(customers_orders):\n",
-    "    precio = {\n",
-    "        articulo: float(input(f\"Introduce el precio del {articulo}:\"))\n",
-    "        for articulo in customers_orders\n",
-    "    }\n",
-    "\n",
-    "    precio_total = sum(precio.values())\n",
-    "\n",
-    "    return precio_total, precio"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "28546c0e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def print_updated_inventory(inventory):\n",
-    "    print(\"updated inventory: \\n\")\n",
-    "    for articulo, cantidad in inventory.items():\n",
-    "        print(f\"{articulo}: {cantidad}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3648ca0a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def main():\n",
-    "    \n",
-    "    print(\"Initializing inventory...\")\n",
-    "    inventory = initialize_inventory(products)\n",
-    "    \n",
-    "    print(\"\\nGetting customer orders...\")\n",
-    "    customers_orders = get_customers_orders()\n",
-    "    \n",
-    "    print(\"\\ncalculando precio total...\")\n",
-    "    total_price_value = calculate_total_price(customers_orders)\n",
-    "    print(f\"\\nPrecio de todos los pedido: ${total_price_value:.2f}\")\n",
-    "    \n",
-    "    print(\"\\nUpdating inventory based on orders...\")\n",
-    "    inventory = update_inventory(customers_orders, inventory)\n",
-    "    \n",
-    "    print(\"\\nImprimiendo inventario actualizado...\")\n",
-    "    print_updated_inventory(inventory)\n",
-    "    \n",
-    "    print(\"\\nCalculating order statistics...\")\n",
-    "    order_statistics = calculate_order_statistics(customers_orders, products)\n",
-    "    print_order_statistics(order_statistics)\n",
-    "    \n",
-    "    print(\"\\nCalculating total price again (if needed)...\")\n",
-    "    total_price_value, item_prices = total_price(customers_orders)\n",
-    "    print(f\"\\nPrecios detallados: {item_prices}\")\n",
-    "    print(f\"Precio de todos los pedidos: ${total_price_value:.2f}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5aa71440",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Definición de las funciones proporcionadas\n",
+    "\n",
     "products = [\"t-shirt\", \"mug\", \"hat\", \"book\", \"keychain\"]\n",
     "\n",
     "def initialize_inventory(products):\n",
@@ -261,12 +101,12 @@
     "    return total_price\n",
     "\n",
     "def update_inventory(customers_orders, inventory):\n",
-    "    # Actualizar el inventario restando 1 a los productos vendidos\n",
+    "    #Actualizar inventario\n",
     "    inventory = {\n",
     "        articulo: (cantidad - 1 if articulo in customers_orders and cantidad > 0 else cantidad)\n",
     "        for articulo, cantidad in inventory.items()\n",
     "    }\n",
-    "    # Filtrar los productos con cantidad mayor a 0\n",
+    "    #Filtrar productos con cantidad mayor a 0\n",
     "    inventory = {articulo: cantidad for articulo, cantidad in inventory.items() if cantidad > 0}\n",
     "    return inventory\n",
     "\n",
@@ -292,46 +132,39 @@
     "\n",
     "def print_updated_inventory(inventory):\n",
     "    print(\"Updated Inventory: \\n\")\n",
-    "    for articulo, cantidad in inventory.items():  # Corregido aquí\n",
+    "    for articulo, cantidad in inventory.items():  \n",
     "        print(f\"{articulo}: {cantidad}\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "c8ecc3cf",
    "metadata": {},
    "outputs": [],
    "source": [
     "def main():\n",
-    "    # Paso 1: Inicializar el inventario\n",
     "    print(\"Inicializando inventario...\")\n",
     "    inventory = initialize_inventory(products)\n",
     "\n",
-    "    # Paso 2: Obtener los pedidos de los clientes\n",
     "    print(\"\\nObteniendo los pedidos de los clientes...\")\n",
     "    customers_orders = get_customers_orders()\n",
     "\n",
-    "    # Paso 3: Calcular el precio total de los pedidos\n",
     "    print(\"\\nCalculando el precio total de los pedidos...\")\n",
     "    total_price_value = calculate_total_price(customers_orders)\n",
     "    print(f\"\\nPrecio total de todos los pedidos: ${total_price_value:.2f}\")\n",
     "\n",
-    "    # Paso 4: Actualizar el inventario según los pedidos\n",
     "    print(\"\\nActualizando el inventario según los pedidos...\")\n",
     "    inventory = update_inventory(customers_orders, inventory)\n",
     "\n",
-    "    # Paso 5: Imprimir el inventario actualizado\n",
     "    print(\"\\nImprimiendo el inventario actualizado...\")\n",
     "    print_updated_inventory(inventory)\n",
     "\n",
-    "    # Paso 6: Calcular estadísticas de los pedidos\n",
     "    print(\"\\nCalculando las estadísticas de los pedidos...\")\n",
     "    order_statistics = calculate_order_statistics(customers_orders, products)\n",
     "    print_order_statistics(order_statistics)\n",
-    "\n",
-    "    # Paso 7: Calcular el precio total nuevamente (opcional, si es necesario)\n",
+    "    \n",
     "    print(\"\\nCalculando el precio total nuevamente (si es necesario)...\")\n",
     "    total_price_value, item_prices = total_price(customers_orders)\n",
     "    print(f\"\\nPrecios detallados: {item_prices}\")\n",
@@ -340,10 +173,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0b7afa11",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inicializando inventario...\n",
+      "\n",
+      "Obteniendo los pedidos de los clientes...\n",
+      "\n",
+      "Calculando el precio total de los pedidos...\n",
+      "\n",
+      "Precio total de todos los pedidos: $9.00\n",
+      "\n",
+      "Actualizando el inventario según los pedidos...\n",
+      "\n",
+      "Imprimiendo el inventario actualizado...\n",
+      "Updated Inventory: \n",
+      "\n",
+      "t-shirt: 90\n",
+      "mug: 89\n",
+      "hat: 89\n",
+      "book: 90\n",
+      "keychain: 90\n",
+      "\n",
+      "Calculando las estadísticas de los pedidos...\n",
+      "Order Statistics:\n",
+      "\n",
+      "Total products ordered: 2\n",
+      "Percentage of unique products ordered: 40.0%\n",
+      "\n",
+      "Calculando el precio total nuevamente (si es necesario)...\n",
+      "\n",
+      "Precios detallados: {'mug': 4.0, 'hat': 5.0}\n",
+      "Precio total de todos los pedidos: $9.00\n"
+     ]
+    }
+   ],
    "source": [
     "main()"
    ]
